[package]
name = "custom-leptos-components"
version = "0.1.0"
edition = "2021"
authors = ["Arturo Pino <apino@vertec.io>"]
description = "A standalone version of Leptos' Portal component."
license = "MIT"
# repository = "https://github.com/yourusername/my_portal"

[dependencies]
leptos = { version = "0.6" }
leptos_dom = { version = "0.6" }
leptos_macro = "0.6"
leptos_reactive = "0.6"
cfg-if = "1"
wasm-bindgen = { version = "0.2"}
web-sys = { version = "0.3.70"}
tracing="0.1"
[features]
default = []
csr = [
    "leptos/csr",
    "leptos_dom/csr",
    "web-sys/ShadowRoot",
    "web-sys/ShadowRootInit",
    "web-sys/ShadowRootMode",
    ]
hydrate = [
    "leptos/hydrate",
    "leptos_dom/hydrate",
    "web-sys/ShadowRoot",
    "web-sys/ShadowRootInit",
    "web-sys/ShadowRootMode",
]
ssr=[
    "leptos/ssr",
    "leptos_dom/ssr"
]


[dev-dependencies]
