[package]
name = "custom-leptos-components"
version = "0.2.2"
edition = "2021"
authors = ["Arturo Pino <apino@vertec.io>"]
description = "A standalone version of Leptos' Portal component."
license = "MIT"
# repository = "https://github.com/yourusername/my_portal"

[dependencies]
leptos = { version = "0.7" }
leptos_dom = { version = "0.7" }
leptos_macro = { version = "0.7" }
leptos_reactive = { version = "0.7.0-preview2" }
reactive_graph = { version = "0.1.0" }
send_wrapper = { version = "0.6.0" }
cfg-if = "1"
wasm-bindgen = { version = "0.2" }
web-sys = { version = "0.3.70" }
tracing = "0.1"
[features]
default = []
csr = [
    "leptos/csr",
    # "leptos_dom/csr",
    "web-sys/ShadowRoot",
    "web-sys/ShadowRootInit",
    "web-sys/ShadowRootMode",
]
hydrate = [
    "leptos/hydrate",
    # "leptos_dom/hydrate",
    "web-sys/ShadowRoot",
    "web-sys/ShadowRootInit",
    "web-sys/ShadowRootMode",
]
ssr = [
    "leptos/ssr",
    # "leptos_dom/ssr"
]
tracing = [
    "leptos/tracing"
]

[dev-dependencies]
